--- a/src/HistoricalBalance/BalanceView.module.css
+++ b/src/HistoricalBalance/BalanceView.module.css
@@ -17,7 +17,7 @@
   color: #7a859e;
 }
 
-.InputWrapper input {
+.InputWrapper input#address {
   margin-top: 0.5rem;
   font-size: 14px;
   text-overflow: ellipsis;
@@ -26,12 +26,14 @@
 }
 
 .InputWithAction {
-  margin-top: 0.5rem;
-  margin-bottom: 0.2rem;
   display: flex;
   align-items: center;
   border: 1px solid #e0e4ee;
   border-radius: 4px;
+}
+
+.InputWithAction, .AssetsField {
+  margin-top: 6px;
 }
 
 .InputWithAction input {
@@ -68,4 +70,13 @@
 .addressLink:hover {
   color: #14c393;
   background: #f6f6f9;
+}
+
+.hint {
+  font-size: 0.75rem;
+  color: rgba(0, 0, 0, 0.54);
+  text-align: left;
+  margin-top: 8px;
+  min-height: 1em;
+  line-height: 1em;
 }
